tests/fail/import_unsafe_extension.py
"""Importing non-whitelisted extension modules should fail."""
try:
    import thread
except ImportError:
    pass
